--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -65,16 +65,22 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Config\ConfigHelper.cs" />
+        <Compile Include="Config\MapPointByName.cs" />
+        <Compile Include="Config\MapPointByRoomType.cs" />
         <Compile Include="ExiledPlayerExtensions.cs" />
         <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
         <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
         <Compile Include="Harmony\Attributes\NonPublicPatch.cs" />
         <Compile Include="Harmony\HarmonyHelper.cs" />
         <Compile Include="Harmony\InstructionHelper.cs" />
+        <Compile Include="ColorHelper.cs" />
         <Compile Include="Pools\BasicPool.cs" />
+        <Compile Include="Pools\DictionaryPool.cs" />
         <Compile Include="Pools\PoolBase.cs" />
         <Compile Include="Pools\IPoolReset.cs" />
         <Compile Include="Pools\ListPool.cs" />
+        <Compile Include="Pools\StringBuilderPool.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ReflectionHelper.cs" />
     </ItemGroup>
