--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -45,10 +45,10 @@
             <HintPath>..\assemblies\Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
         <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\Steam\SCPSL\pluginz\assemblies\CommandSystem.Core.dll</HintPath>
+          <HintPath>..\assemblies\CommandSystem.Core.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.API, Version=5.2.1.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\assemblies\Exiled.API.dll</HintPath>
+        <Reference Include="Exiled.API, Version=5.3.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\assemblies\Exiled.API.dll</HintPath>
         </Reference>
         <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>..\assemblies\Mirror.dll</HintPath>
@@ -58,22 +58,29 @@
         </Reference>
         <Reference Include="System" />
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\assemblies\UnityEngine.dll</HintPath>
+          <HintPath>..\assemblies\UnityEngine.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\..\Steam\SCPSL\pluginz\assemblies\UnityEngine.CoreModule.dll</HintPath>
+          <HintPath>..\assemblies\UnityEngine.CoreModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.PhysicsModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\assemblies\UnityEngine.PhysicsModule.dll</HintPath>
         </Reference>
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Config\ConfigHelper.cs" />
         <Compile Include="Config\IMapPoint.cs" />
         <Compile Include="Config\StaticMapPoint.cs" />
+        <Compile Include="Config\Translations\AttributeHandler.cs" />
+        <Compile Include="Config\Translations\RegisterNestedTranslationsAttribute.cs" />
+        <Compile Include="Config\Translations\RegisterStaticTranslationsInTypeAttribute.cs" />
         <Compile Include="Config\Translations\TranslationAttribute.cs" />
         <Compile Include="Config\Translations\TranslationHelper.cs" />
         <Compile Include="Config\Translations\TranslationRegistry.cs" />
         <Compile Include="Config\MapPointByName.cs" />
         <Compile Include="Config\MapPointByRoomType.cs" />
         <Compile Include="Config\SerializedRotation.cs" />
+        <Compile Include="EnumeratorWrapping.cs" />
         <Compile Include="ExiledPlayerExtensions.cs" />
         <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
         <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
@@ -89,6 +96,7 @@
         <Compile Include="Pools\StringBuilderPool.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ReflectionHelper.cs" />
+        <Compile Include="UnityHelper.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
