--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -88,11 +88,17 @@
         <Compile Include="Pools\BasicPool.cs" />
         <Compile Include="Pools\DictionaryPool.cs" />
         <Compile Include="Pools\PoolBase.cs" />
-        <Compile Include="Pools\IPoolReset.cs" />
+        <Compile Include="Pools\IPoolResettable.cs" />
         <Compile Include="Pools\ListPool.cs" />
         <Compile Include="Pools\StringBuilderPool.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ReflectionHelper.cs" />
+        <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
+        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
+        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs" />
+        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
+        <Compile Include="PlayerInfo\Scp079Info.cs" />
+        <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
         <Compile Include="UnityHelper.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
