isinst + rich text helpers

--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -100,6 +100,7 @@
         <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
         <Compile Include="PlayerInfo\Scp079Info.cs" />
         <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
+        <Compile Include="RichTextHelper.cs" />
         <Compile Include="UnityHelper.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
