--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -125,6 +125,7 @@
         <Compile Include="Config\Translations\TranslationHelper.cs" />
         <Compile Include="Config\Translations\TranslationRegistry.cs" />
         <Compile Include="EnumeratorWrapping.cs" />
+        <Compile Include="IIsValid.cs" />
         <Compile Include="PlayerExtensions.cs" />
         <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
         <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
@@ -132,6 +133,9 @@
         <Compile Include="Harmony\HarmonyHelper.cs" />
         <Compile Include="Harmony\InstructionHelper.cs" />
         <Compile Include="HintQueue.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
         <Compile Include="PlayerInfo\CooldownInfo.cs" />
         <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
         <Compile Include="PlayerInfo\Delegates.cs" />
@@ -144,9 +148,9 @@
         <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
         <Compile Include="PlayerInfo\PlayerInfoObtainer.cs" />
         <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs" />
-        <Compile Include="PlayerInfo\Scp079Info.cs" />
-        <Compile Include="PlayerInfo\Scp079SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
         <Compile Include="Pools\BasicPool.cs" />
         <Compile Include="Pools\DictionaryPool.cs" />
         <Compile Include="Pools\IPoolResettable.cs" />
