106 and 939[WIP] info

--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -136,6 +136,7 @@
         <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\CooldownInfo.cs" />
         <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
         <Compile Include="PlayerInfo\Delegates.cs" />
@@ -151,6 +152,8 @@
         <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs" />
         <Compile Include="Pools\BasicPool.cs" />
         <Compile Include="Pools\DictionaryPool.cs" />
         <Compile Include="Pools\IPoolResettable.cs" />
