--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -12,7 +12,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Axwabo.Helpers</RootNamespace>
         <AssemblyName>Axwabo.Helpers</AssemblyName>
-        <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>9</LangVersion>
     </PropertyGroup>
@@ -38,8 +38,11 @@
         <DocumentationFile>bin\Release\Axwabo.Helpers.xml</DocumentationFile>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="0Harmony, Version=2.0.4.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>..\assemblies\0Harmony.dll</HintPath>
+        <Reference Include="0Harmony, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\Lib.Harmony.2.2.2\lib\net472\0Harmony.dll</HintPath>
+        </Reference>
+        <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Assembly-CSharp-Publicized.dll</HintPath>
         </Reference>
         <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>..\assemblies\Assembly-CSharp.dll</HintPath>
@@ -47,14 +50,41 @@
         <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>..\assemblies\Assembly-CSharp-firstpass.dll</HintPath>
         </Reference>
-        <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\assemblies\CommandSystem.Core.dll</HintPath>
+        <Reference Include="CommandSystem.Core, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\CommandSystem.Core.dll</HintPath>
         </Reference>
-        <Reference Include="Exiled.API, Version=5.3.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\assemblies\Exiled.API.dll</HintPath>
+        <Reference Include="Exiled.API, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.API.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.CreditTags, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.CreditTags.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.CustomItems, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.CustomItems.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.CustomRoles, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.CustomRoles.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.Events, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.Events.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.Loader, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.Loader.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.Permissions, Version=6.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.Permissions.dll</HintPath>
+        </Reference>
+        <Reference Include="Exiled.Updater, Version=3.1.1.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\Exiled.Updater.dll</HintPath>
         </Reference>
         <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>..\assemblies\Mirror.dll</HintPath>
+        </Reference>
+        <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\NorthwoodLib.dll</HintPath>
+        </Reference>
+        <Reference Include="PluginAPI, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
+          <HintPath>..\packages\EXILED.6.0.0-beta.17\lib\net48\PluginAPI.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
@@ -89,12 +119,28 @@
         <Compile Include="Harmony\InstructionHelper.cs" />
         <Compile Include="ColorHelper.cs" />
         <Compile Include="HintQueue.cs" />
+        <Compile Include="IIsValid.cs" />
+        <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\CooldownInfo.cs" />
         <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
         <Compile Include="PlayerInfo\Delegates.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
+        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
+        <Compile Include="PlayerInfo\Effect\EffectType.cs" />
+        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs" />
+        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
         <Compile Include="PlayerInfo\IPlayerInfoWithRole.cs" />
+        <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
+        <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
         <Compile Include="PlayerInfo\PlayerInfoObtainer.cs" />
         <Compile Include="PlayerInfo\RoleTypeAndInfoWrapper.cs" />
+        <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs" />
         <Compile Include="Pools\BasicPool.cs" />
         <Compile Include="Pools\DictionaryPool.cs" />
         <Compile Include="Pools\PoolBase.cs" />
@@ -103,14 +149,12 @@
         <Compile Include="Pools\StringBuilderPool.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ReflectionHelper.cs" />
-        <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
-        <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
-        <Compile Include="PlayerInfo\Effect\HypothermiaInfo.cs" />
-        <Compile Include="PlayerInfo\Effect\StandardEffectInfo.cs" />
-        <Compile Include="PlayerInfo\Scp079Info.cs" />
-        <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
         <Compile Include="RichTextHelper.cs" />
         <Compile Include="UnityHelper.cs" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="App.config" />
+      <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 
