--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -77,8 +77,8 @@
         <Reference Include="NorthwoodLib, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
           <HintPath>..\packages\EXILED.6.0.0-beta.18\lib\net48\NorthwoodLib.dll</HintPath>
         </Reference>
-        <Reference Include="PluginAPI, Version=12.0.0.0, Culture=neutral, processorArchitecture=Amd64">
-          <HintPath>..\packages\EXILED.6.0.0-beta.18\lib\net48\PluginAPI.dll</HintPath>
+        <Reference Include="PluginAPI">
+          <HintPath>..\..\..\Steam\SCPSL\plugins\assemblies\PluginAPI.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
@@ -115,10 +115,12 @@
         <Compile Include="HintQueue.cs" />
         <Compile Include="IIsValid.cs" />
         <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs" />
+        <Compile Include="PlayerInfo\Containers\CooldownInfo.cs" />
         <Compile Include="PlayerInfo\Containers\Scp049SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\Containers\Scp079SubroutineContainer.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp096SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\Containers\Scp106SubroutineContainer.cs" />
-        <Compile Include="PlayerInfo\CooldownInfo.cs" />
+        <Compile Include="PlayerInfo\Containers\Scp173SubroutineContainer.cs" />
         <Compile Include="PlayerInfo\CustomRoleAndInfoWrapper.cs" />
         <Compile Include="PlayerInfo\Delegates.cs" />
         <Compile Include="PlayerInfo\Effect\EffectInfoBase.cs" />
@@ -133,7 +135,9 @@
         <Compile Include="PlayerInfo\StandardPlayerInfo.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp049Info.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp079Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp096Info.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp106Info.cs" />
+        <Compile Include="PlayerInfo\Vanilla\Scp173Info.cs" />
         <Compile Include="PlayerInfo\Vanilla\Scp939Info.cs" />
         <Compile Include="Pools\BasicPool.cs" />
         <Compile Include="Pools\DictionaryPool.cs" />
