330 + usable item info

--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -152,7 +152,11 @@
         <Compile Include="PlayerInfo\ItemInfoObtainer.cs" />
         <Compile Include="PlayerInfo\Item\FirearmInfo.cs" />
         <Compile Include="PlayerInfo\Item\ItemInfoBase.cs" />
+        <Compile Include="PlayerInfo\Item\Scp1576Info.cs" />
+        <Compile Include="PlayerInfo\Item\Scp268Info.cs" />
+        <Compile Include="PlayerInfo\Item\UsableItemInfo.cs" />
         <Compile Include="PlayerInfo\Item\RadioInfo.cs" />
+        <Compile Include="PlayerInfo\Item\Scp330BagInfo.cs" />
         <Compile Include="PlayerInfo\PlayerInfoBase.cs" />
         <Compile Include="PlayerInfo\PlayerInfoExtensions.cs" />
         <Compile Include="PlayerInfo\PlayerInfoObtainer.cs" />
