--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -12,7 +12,7 @@
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Axwabo.Helpers</RootNamespace>
-        <AssemblyName>Axwabo.Helpers</AssemblyName>
+        <AssemblyName>Axwabo.Helpers.NWAPI</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>9</LangVersion>
@@ -126,7 +126,6 @@
         <Compile Include="Config\Translations\TranslationHelper.cs" />
         <Compile Include="Config\Translations\TranslationRegistry.cs" />
         <Compile Include="EnumeratorWrapping.cs" />
-        <Compile Include="IIsValid.cs" />
         <Compile Include="PlayerExtensions.cs" />
         <Compile Include="Harmony\Attributes\ConstructorPatch.cs" />
         <Compile Include="Harmony\Attributes\NestedClassPatch.cs" />
