info fixes + add RefHub methods

--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -16,6 +16,7 @@
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>9</LangVersion>
+        <NoWarn>MSB3277</NoWarn>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>x64</PlatformTarget>
