--- a/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
+++ b/Axwabo.Helpers.NWAPI/Axwabo.Helpers.NWAPI.csproj
@@ -54,8 +54,8 @@
           <HintPath>$(NW-ASSEMBLIES)\Mirror.dll</HintPath>
         </Reference>
         <Reference Include="mscorlib"/>
-        <Reference Include="PluginAPI, Version=13.1.1.0, Culture=neutral, processorArchitecture=Amd64">
-            <HintPath>..\packages\Northwood.PluginAPI.13.1.1\lib\net48\PluginAPI.dll</HintPath>
+        <Reference Include="PluginAPI">
+            <HintPath>$(NW-ASSEMBLIES)\PluginAPI.dll</HintPath>
         </Reference>
         <Reference Include="Pooling">
           <HintPath>$(NW-ASSEMBLIES)\Pooling.dll</HintPath>
