--- a/Axwabo.Helpers/Axwabo.Helpers.csproj
+++ b/Axwabo.Helpers/Axwabo.Helpers.csproj
@@ -124,9 +124,19 @@
         <Compile Include="Harmony\Attributes\NonPublicPatch.cs"/>
         <Compile Include="Harmony\HarmonyHelper.cs"/>
         <Compile Include="ColorHelper.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Arguments.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Calls.cs"/>
         <Compile Include="Harmony\InstructionHelper.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Elements.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Extensions.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Fields.cs"/>
         <Compile Include="Harmony\InstructionHelper.Find.cs"/>
+        <Compile Include="Harmony\InstructionHelper.GetSet.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Locals.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Numbers.cs"/>
+        <Compile Include="Harmony\InstructionHelper.Operators.cs"/>
         <Compile Include="HintQueue.cs"/>
+        <Compile Include="Parse.ArraySegment.cs"/>
         <Compile Include="Parse.cs"/>
         <Compile Include="PlayerInfo\Containers\BasicRoleInfo.cs"/>
         <Compile Include="PlayerInfo\Containers\CooldownInfo.cs"/>
